--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link type="stylesheet" href="buttons.css">
 </head>
 <body>
-    <iframe src="buttons.html" style="position: absolute; right: 0%; top: 0%;" id="buttons">Check your internet connection</iframe>
+    <iframe src="buttons.html" style="position: absolute; right: 0%; top: 0%; height: 100%;" id="buttons">Check your internet connection</iframe>
 </body>
 </html>
