--- a/buttons.html
+++ b/buttons.html
@@ -7,6 +7,6 @@
     <link type="stylesheet" href="buttons.css">
 </head>
 <body>
-    <button id="bluecamo"></button>
+    <button id="bluecamo" style="background-color: blue; height: 20px; width: 20px;"></button>
 </body>
 </html>
