--- a/buttons.html
+++ b/buttons.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <button id="bluecamo" style="background-color: blue; border-radius: 100%; height: 100px; width: 100px;"></button>
+    <button id="bluecamo" style="background-color: red; border-radius: 100%; height: 100px; width: 100px;"></button>
+
 </body>
 </html>
