--- a/buttons.html
+++ b/buttons.html
@@ -7,9 +7,9 @@
     <link type="stylesheet" href="buttons.css">
 </head>
 <body>
-    <button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 70px;"></button>
-    <button id="bluecamo" style="background-color: red; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;"></button>
-    <button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;"></button>
+    <button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, blue)"></button>
+    <button id="bluecamo" style="background-color: red; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button>
+    <button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button>
 
 </body>
 </html>
