--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <iframe src="buttons.html" style="position: absolute; right: 0%; top: 0%; height: 100%;" id="buttonsiframe" scrolling="yes">Check your internet connection</iframe>
-    <div id="Customizer">
+    <div id="Customizer" style="position: absolute; left: 0%; height: 100%;">
         <div id="face"></div>
     </div>
 </body>
