--- a/buttons.html
+++ b/buttons.html
@@ -7,14 +7,14 @@
     <link type="stylesheet" href="buttons.css">
 </head>
 <body>
-    <table>
+    <table style="position: absolute; margin-left: auto; margin-right: auto;">
         <tr>
             <td><button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, blue)"></button></td>
             <td><button id="bluecamo" style="background-color: red; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button></td>
             <td><button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button></td>
         </tr>
         <tr>
-            
+
         </tr>
     </table>
 </body>
