--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link type="stylesheet" href="buttons.css">
 </head>
 <body>
-    <iframe src="buttons.html" style="position: absolute; right: 0%; top: 0%; height: 100%;" id="buttonsiframe" scrolling="yes">Check your internet connection</iframe>
+    <iframe src="buttons.html" style="position: absolute; right: 0%; top: 0%; height: 100%; width: 20%;" id="buttonsiframe" scrolling="yes">Check your internet connection</iframe>
     <div id="Customizer" style="position: absolute; left: 0%; height: 100%;">
         <div id="face"></div>
     </div>
