--- a/buttons.html
+++ b/buttons.html
@@ -9,9 +9,9 @@
 <body>
     <table style="position: absolute; margin-left: auto; margin-right: auto; max-width: 20%;">
         <tr>
-            <td><button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, blue)"></button></td>
-            <td><button id="bluecamo" style="background-color: red; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button></td>
-            <td><button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 70px;" onclick="change(face, red)"></button></td>
+            <td><button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 8%;" onclick="change(face, blue)"></button></td>
+            <td><button id="bluecamo" style="background-color: red; border: 3px solid white; border-radius: 100%; height: 70px; width: 8%;" onclick="change(face, red)"></button></td>
+            <td><button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 8%;" onclick="change(face, red)"></button></td>
         </tr>
         <tr>
 
