--- a/buttons.html
+++ b/buttons.html
@@ -14,6 +14,7 @@
             <td><button id="bluecamo" style="background-color: black; border: 3px solid white; border-radius: 100%; height: 70px; width: 8%; padding: 1%;" onclick="change(face, red)"></button></td>
         </tr>
         <tr>
+            <td><button id="bluecamo" style="background-color: blue; border:3px solid white; border-radius: 100%; height: 70px; width: 8%; padding: 1%;" onclick="change(face, blue)"></button></td>
 
         </tr>
     </table>
